# SutraDB

./: !browse.bat  !load_test_data.bat  !serve.bat  .gitattributes  .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  Claude dms.md  Dockerfile  README.md  TODO.md  architecture.md  benchmark_results.json  install.bat  install.sh  storage_benchmark_results.json  stress_test.py  stress_test_report.json  wikidata_import_state.json
.claude/: settings.local.json
.github/workflows/: benchmarks.yml  ci.yml  integration.yml  pages.yml  publish-sdks.yml  release.yml
benchmarks/: HISTORY.md  LATEST.md
docs/: AGENT_SETUP.md  SDK_ACCOUNTS_SETUP.md  SDK_PUBLISHING.md  architecture.md  ontochronology.md  query-examples.md  session_notes_2026-03-15.md  vectorSPARQL.md
mnt/user-data/outputs/vektor/vektor-cli/: Cargo.toml
mnt/user-data/outputs/vektor/vektor-core/: Cargo.toml
mnt/user-data/outputs/vektor/vektor-hnsw/: Cargo.toml
mnt/user-data/outputs/vektor/vektor-proto/: Cargo.toml
mnt/user-data/outputs/vektor/vektor-sparql/: Cargo.toml
pages/: 404.html  CNAME  index.html  readme.md  robots.txt  sitemap.xml  style.css
pages/benchmarks/: index.html
pages/code-of-conduct/: index.html
pages/codeofethics/: index.html
pages/creation/: index.html
pages/graph-vector/: index.html
pages/libraries/: index.html
pages/owl/: index.html
pages/protocols/: index.html
pages/rdf/: index.html
pages/roadmap/: index.html
pages/sdb-format/: index.html
pages/serverless/: index.html
pages/sparql/: index.html
pages/theory/: index.html
pages/theory/client-side-owl/: index.html
pages/theory/cost-based-planning/: index.html
pages/theory/four-index-architecture/: index.html
pages/theory/graph-databases/: index.html  main.js
pages/theory/health-diagnostics/: index.html
pages/theory/hnsw-implementation/: index.html
pages/theory/hnsw-in-rdf/: index.html  main.js
pages/theory/hybrid-databases/: index.html  main.js
pages/theory/iri-interning/: index.html
pages/theory/ontochronology/: index.html
pages/theory/pseudo-table-discovery/: index.html
pages/theory/rdf-star-edges/: index.html
pages/theory/rhizomatic-description-framework/: index.html
pages/theory/simd-acceleration/: index.html
pages/theory/sparql-exit-conditions/: index.html  main.js
pages/theory/subgraph-indexing/: index.html  main.js
pages/theory/sutradb/: index.html  main.js
pages/theory/traversal-indexing/: index.html  main.js
pages/theory/vector-databases/: index.html  main.js
pages/theory/vector-sparql-operators/: index.html
sdks/dotnet/: Models.cs  README.md  SutraClient.cs  SutraDB.Client.csproj  SutraError.cs
sdks/go/: README.md  client.go  client_test.go  go.mod  types.go
sdks/java/: README.md  build.gradle.kts  pom.xml  settings.gradle.kts
sdks/java/src/main/java/dev/sutradb/: SparqlResults.java  SutraClient.java  SutraError.java
sdks/java/src/main/java/io/github/emmaleonhart/sutradb/: SparqlResults.java  SutraClient.java  SutraError.java
sdks/java/src/test/java/dev/sutradb/: SparqlResultsTest.java  SutraClientTest.java
sdks/java/src/test/java/io/github/emmaleonhart/sutradb/: SparqlResultsTest.java  SutraClientTest.java
sdks/python/: README.md  pyproject.toml
sdks/python/sutradb/: __init__.py  client.py  jupyter.py  langchain.py  owl.py
sdks/python/tests/: test_client.py  test_owl.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: client.rs  error.rs  lib.rs  types.rs
sdks/typescript/: README.md  package.json  tsconfig.json
sdks/typescript/src/: client.ts  index.ts  types.ts
sdks/typescript/tests/: client.test.ts
sutra-cli/: Cargo.toml
sutra-cli/src/: main.rs  mcp.rs
sutra-core/: Cargo.toml
sutra-core/benches/: triple_insert.rs
sutra-core/src/: config.rs  error.rs  id.rs  lib.rs  ntriples.rs  persistent.rs  pseudotable.rs  rdfxml.rs  store.rs  triple.rs
sutra-core/tests/: integration.rs
sutra-ffi/src/: lib.rs
sutra-hnsw/: Cargo.toml
sutra-hnsw/benches/: hnsw_search.rs
sutra-hnsw/src/: edges.rs  error.rs  index.rs  lib.rs  node.rs  registry.rs  vector.rs
sutra-hnsw/tests/: integration.rs
sutra-proto/: Cargo.toml
sutra-proto/src/: error.rs  lib.rs  server.rs
sutra-sparql/: Cargo.toml
sutra-sparql/benches/: sparql_query.rs
sutra-sparql/src/: error.rs  executor.rs  health.rs  lib.rs  parser.rs  planner.rs
sutra-sparql/tests/: integration.rs  stress.rs
sutra-studio/: README.md  pubspec.yaml
sutra-studio/lib/: main.dart
sutra-studio/lib/models/: connection_config.dart  graph_node.dart  triple.dart
sutra-studio/lib/screens/: auth_screen.dart  graph_screen.dart  health_screen.dart  ontology_screen.dart  sparql_screen.dart  triples_screen.dart
sutra-studio/lib/services/: connection_provider.dart  sutra_client.dart
sutra-studio/lib/theme/: sutra_theme.dart
sutra-studio/lib/widgets/: graph_canvas.dart
sutra-studio/linux/: CMakeLists.txt
sutra-studio/linux/runner/: my_application.cc
sutra-studio/macos/Runner.xcodeproj/: project.pbxproj
sutra-studio/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
sutra-studio/macos/Runner/Configs/: AppInfo.xcconfig
sutra-studio/test/: widget_test.dart
sutra-studio/web/: index.html  manifest.json
sutra-studio/windows/: CMakeLists.txt
sutra-studio/windows/runner/: Runner.rc  main.cpp
tools/: benchmark.py  browse.bat  browse.html  embed_japanese_labels.py  storage_benchmark.py  wikidata_bfs_import.py
tools/mcp-server/: server.py
tools/protege-plugin/: build-and-install.bat  pom.xml
tools/protege-plugin/src/main/java/dev/sutra/protege/: SutraDbView.java
tools/protege-plugin/src/main/resources/: plugin.xml  viewconfig-sutradb.xml
unstructured/: Claude conversation.md  Gemini Conversation.md  claude 2.md  export.txt
