[package]
name = "sutra-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tools: import, export, query, benchmark"

[[bin]]
name = "sutra"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
clap.workspace = true
sutra-core.workspace = true
sutra-hnsw.workspace = true
sutra-sparql.workspace = true
sutra-proto.workspace = true
