[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sutradb"
version = "0.1.0"
description = "Python client for SutraDB — RDF-star triplestore with native vector indexing"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]
authors = [{ name = "EmmaLeonhart" }]
keywords = ["sutradb", "rdf", "sparql", "vector", "graph-database", "triplestore"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://sutradb.org/"
Repository = "https://github.com/EmmaLeonhart/SutraDB"
