[package]
name = "vektor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tools: import, export, query, benchmark"

[[bin]]
name = "vektor"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
clap.workspace = true
vektor-core.workspace = true
vektor-sparql.workspace = true
vektor-proto.workspace = true
