[package]
name = "vektor-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SPARQL HTTP protocol, SPARQL Graph Store Protocol, REST API"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
vektor-core.workspace = true
vektor-sparql.workspace = true
