[package]
name = "vektor-sparql"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SPARQL 1.1 parser, query planner, executor, and hybrid VECTOR_SIMILAR extension"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde = { workspace = true }
tracing.workspace = true
vektor-core.workspace = true
vektor-hnsw.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "sparql_query"
harness = false
